@@ -1,4 +1,4 @@
-Copyright 2017 Huawei Technologies Co., LTD
+Copyright 2018 Huawei Technologies Co., LTD
 Licensed under the Apache License, Version 2.0(the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
