@@ -1,2 +1,6 @@
 2017-12-14 version 1.0.0
-1. create smn(Simple Message Notification),  implement all api interfaces
+1.create smn(Simple Message Notification),  implement all api interfaces
+
+2018-02-02 version 1.0.1:
+1.Add sms template
+2.Optimize code
